# hmath

./: .gitignore  CMakeLists.txt  LICENSE  hmath.cpp  hmath.h  hmathanalysis.cpp  hmathanalysis.h  hmathbitops.cpp  hmathbitops.h  hmathconfig.h  hmathconstants.h  hmathfunctionsequence.cpp  hmathfunctionsequence.h  hmathpolynomial.cpp  hmathpolynomial.h  hmathstaticpolynomial.h  hmathtypes.cpp  hmathtypes.h  hmathutil.cpp  hmathutil.h  main.cpp
